--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,58 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-}
+@import url(./vendor/normalize.css);
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
-}
+@import url(./vendor/fonts/fonts.css);
+
+@import url(./blocks/page/page.css);
+
+@import url(./blocks/header/header.css);
+@import url(./blocks/header/__logo/header__logo.css);
+
+@import url(./blocks/content/content.css);
+
+
+@import url(./blocks/profile/profile.css);
+@import url(./blocks/profile/__avatar/profile_avatar.css);
+@import url(./blocks/profile/__info/profile__info.css);
+@import url(./blocks/profile/__name/profile__name.css);
+@import url(./blocks/profile/__text/profile__text.css);
+@import url(./blocks/profile/__edit-button/profile__edit-button.css);
+@import url(./blocks/profile/__add-button/profile__add-button.css);
+
+@import url(./blocks/element/element.css);
+
+@import url(./blocks/elements/elements.css);
+@import url(./blocks/elements/__gallery/elements__gallery.css);
+@import url(./blocks/elements/__like/elements__like.css);
+@import url(./blocks/elements/__like-button/elements__like-button.css);
+@import url(./blocks/elements/__like-counter/elements__like-counter.css);
+@import url(./blocks/elements/__like-button/_active/elements__like_active.css);
+@import url(./blocks/elements/__button-remove/_active/elements__button-remove_active.css);
+
+@import url(./blocks/elements/__info/elements__info.css);
+@import url(./blocks/elements/__title/elements__title.css);
+@import url(./blocks/elements/__image/elements__image.css);
+@import url(./blocks/elements/__button-remove/elements__button-remove.css);
+@import url(./blocks/elements/__button-remove/_active/elements__button-remove_active.css);
+
+@import url(./blocks/footer/footer.css);
+@import url(./blocks/footer/__copyright/footer__copyright.css);
+
+@import url(./blocks/popup/popup.css);
+@import url(./blocks/popup/_opened/popup_opened.css);
+@import url(./blocks/popup/__container/popup__container.css);
+@import url(./blocks/popup/__close/popup__close.css);
+@import url(./blocks/popup/__fieldset/popup__fieldset.css);
+@import url(./blocks/popup/__title/popup__title.css);
+@import url(./blocks/popup/__input/popup__input.css);
+@import url(./blocks/popup/__input/_error/popup__input_error.css);
+@import url(./blocks/popup/__input-error/popup__input-error.css);
+@import url(./blocks/popup/__save/popup__save.css);
+@import url(./blocks/popup/__title-confirm/popup__title-confirm.css);
+@import url(./blocks/popup/__save/_disabled/popup__save_disabled.css);
+
+@import url(./blocks/popup/__image-caption/popup__image-caption.css);
+@import url(./blocks/popup/__image-container/popup__image-container.css);
+@import url(./blocks/popup/__image-wrapper/popup__image-wrapper.css);
+@import url(./blocks/popup/__image/popup__image.css);
+@import url(./blocks/popup/_place/popup_place_image.css);
+
