--- a/src/blocks/footer/__copyright/footer__copyright.css
+++ b/src/blocks/footer/__copyright/footer__copyright.css
@@ -18,7 +18,7 @@
 
 @media screen and (max-width: 600px) {
     .footer__copyright {
-        margin-bottom: 36px;
+        padding-bottom: 36px;
     }
 }
 
