--- a/src/blocks/header/header.css
+++ b/src/blocks/header/header.css
@@ -2,10 +2,18 @@
     max-width: 880px;
     margin: 0 auto;
     border-bottom: 1px solid rgba(84, 84, 84, .7);
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.header_active {
+    padding-top: 140px;
+    border-top: 1px solid #545454;
 }
 
 @media screen and (max-width: 880px) {
     .header {
-        padding-left: 27px;
+        padding: 0 27px;
     }
 }
