--- a/src/blocks/page/page.css
+++ b/src/blocks/page/page.css
@@ -1,7 +1,7 @@
 .page {
     background-color: #000;
     margin: 0 auto;
-    padding-top: 45px;
+    /* padding-top: 45px; */
     -moz-osx-font-smoothing: grayscale;
     -webkit-font-smoothing: antialiased;
     -webkit-text-size-adjust: 100%;
@@ -14,11 +14,11 @@
    
 }
 
-@media screen and (max-width: 880px) {
+/* @media screen and (max-width: 880px) {
     .page {
         padding-top: 28px;
     }
-}
+} */
 
 
 
