--- a/src/blocks/popup/__title/popup__title.css
+++ b/src/blocks/popup/__title/popup__title.css
@@ -6,10 +6,22 @@
     margin: 0 0 50px 0;
 }
 
+.popup__title-infoTooltip {
+    text-align: center;
+    margin-bottom: 23px;
+}
+
 @media screen and (max-width: 600px) {
     .popup__title {
         font-size: 18px;
         line-height: 22px;
         margin-bottom: 75px;
     }
+
+    .popup__title-infoTooltip {
+        font-size: 20px;
+        line-height: 24px;
+        margin-bottom: 20px;
+    }
 }
+
