--- a/src/index.css
+++ b/src/index.css
@@ -6,6 +6,10 @@
 
 @import url(./blocks/header/header.css);
 @import url(./blocks/header/__logo/header__logo.css);
+@import url(./blocks/header/__userElements/header__userElements.css);
+@import url(./blocks/header/__userElements/header__userElements-email.css);
+@import url(./blocks/header/__userElements/header__userElements-logout.css);
+@import url(./blocks/header/__navLink/header__navLink.css);
 
 @import url(./blocks/content/content.css);
 
@@ -49,10 +53,22 @@
 @import url(./blocks/popup/__save/popup__save.css);
 @import url(./blocks/popup/__title-confirm/popup__title-confirm.css);
 @import url(./blocks/popup/__save/_disabled/popup__save_disabled.css);
+@import url(./blocks/popup/__infoTooltip/popup__infoTooltip.css);
+@import url(./blocks/popup/__message-icon/popup__message-icon.css);
 
 @import url(./blocks/popup/__image-caption/popup__image-caption.css);
 @import url(./blocks/popup/__image-container/popup__image-container.css);
 @import url(./blocks/popup/__image-wrapper/popup__image-wrapper.css);
 @import url(./blocks/popup/__image/popup__image.css);
 @import url(./blocks/popup/_place/popup_place_image.css);
+
+@import url(./blocks/login/login.css);
+@import url(./blocks/login/__paragraph/login__paragraph.css);
+@import url(./blocks/login/__button/login__button.css);
+@import url(./blocks/login/__title/login__title.css);
+@import url(./blocks/login/__input/login__input.css);
+
+@import url(./blocks/form/form.css);
+@import url(./blocks/form/__login/form__login.css);
+
 
